<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/signpic"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/sign_title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/top_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tablet_clear"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/settext_bg"
            android:text="@string/btnReset"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/purchaseorder"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/tablet_ok"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/settext_bg_gray"
            android:text="@string/btnnextStep"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sign_title"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="20dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/tip_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sign_dis"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lable_card"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mTextCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#D7D7D7" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sign_dis"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lable_date"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mTextDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#D7D7D7" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sign_dis"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lable_money"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mTextMoney"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="#7C7C7C"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#D7D7D7" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/lable_card_signname"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp  " />
                <!-- 消费都手写签名区 -->

                <FrameLayout
                    android:id="@+id/tablet_view"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/setwhite">
                </FrameLayout>

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/legend_agree_sign"
                android:textColor="#A2A2A2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/block_agree_sign"
                android:textColor="#FF0000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>