<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/top"
        android:layout_marginBottom="10dip"
        android:padding="10dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/tip_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_bg_green"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="center"
                android:text="@string/legend_order_detail"
                android:textColor="#696A6E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#D7D7D7" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_orderCode"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextOrderCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_cardNo_4"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextOrderDataTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_trans_money"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextTransMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#0080CA" />
                </TableRow>

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_order_state"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextOrderState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>
                
               

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_trans_time"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextTransTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>

                


                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_term_number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextPosNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow android:layout_marginTop="5dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lable_batch_no"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/mTextBatchNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </TableRow>

              
               

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:background="#D7D7D7" />

               
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/action_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/alert_dialog_btn"
            android:gravity="center"
            android:text="@string/btnRevoke"
            android:textColor="@color/white" 
            android:visibility="gone"
            />

        <!-- <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_grey_btn"
            android:gravity="center"
            android:text="@string/btnBack"
            android:textColor="@color/white" /> -->
    </LinearLayout>

</RelativeLayout>